--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-     "lint": "eslint src//*.{js,jsx,ts,tsx}"
+    "lint": "eslint src//*.{js,jsx,ts,tsx}"
   },
   "eslintConfig": {
     "extends": [
